2011-03-29 Josef Cacek
  * Added option which allows to disable Acrobat 6 layer mode (in visible signature settings) tracker#3250105  
  * Font size setting applied also for "Signature name and description" display mode as a maximal allowed size 
    - i.e. it can be generated smaller in the result tracker#3201238  

2011-03-28 Josef Cacek
  * Verifier updates suggested in http://sourceforge.net/projects/jsignpdf/forums/forum/782217/topic/4432329

2011-03-13 Josef Cacek
  * Java Runtime Environment update (6u24)

2011-03-11 Josef Cacek
  * setting default OCSP server URL

2011-01-09 Josef Cacek (1.1.1)
  * created l4j.ini files for exe launchers - JRE maximum memory is configurable now

2010-12-22 Josef Cacek
  * checking known critical extensions is disabled by default

2010-11-18 Josef Cacek
  * added some "well-known" certificate critical extensions 

2010-10-27 Josef Cacek (1.1.0)
  * updated documentation
  * fixed setting Policy OID in CLI mode

2010-10-26 Josef Cacek
  * added support for a custom TSA policy OID
  * fixed setting hash algorithm from command line (thanks to Jan Klimes)
  
2010-10-06 Josef Cacek
  * additional Certificate checks implemented
  * Certificate checks can be disabled in conf.properties under following keys:
    - certificate.checkValidity checks the time validity
    - certificate.checkKeyUsage checks if keyUsage extension contains "digitalSignature" or "nonRepudiation" bits set
    - certificate.checkCriticalExtensions checks if the certificate contains only supported critical extensions (only KeyUsage in this time)

2010-08-24 Josef Cacek (1.0.3)
  * Windows verifier launcher Verify.exe
  * Previous/Next page buttons in PDF preview window 

2010-08-18 Josef Cacek
  * Append mode is the default
  * Fixed page numbering in PdfRenderer preview

2010-07-26 Josef Cacek
  * Updated Japanese translation (thanks to mshibata(at)sf.net)

2010-07-14 Josef Cacek
  * Windows console launcher JSignPdfC.exe

2010-07-12 Josef Cacek (1.0.2)