@@ -26,3 +26,8 @@
 # 	2.5.29.29 - Certificate Issuer
 # 	2.5.29.37 - Extended Key Usage
 certificate.checkCriticalExtensions=false
+
+# pkcs11config.path is a path (either absolute or relative to the working directory) to PKCS#11 provider configuration;
+# if the file exists it's used to register a new SunPKCS11 provider instance
+# as described in http://download.oracle.com/javase/6/docs/technotes/guides/security/p11guide.html
+#pkcs11config.path=conf/pkcs11.cfg
