@@ -1,0 +1,12 @@
+# Sample file for registering PKCS#11 security provider in JSignPdf
+# Feel free to edit it and then set path to the file in the conf.properties configuration file.
+
+# Look for full list of possible attributes at
+# http://download.oracle.com/javase/6/docs/technotes/guides/security/p11guide.html#ATTRS
+
+name=JSignPdfPKCS11Provider
+
+# if you are not sure about your PKCS driver library check following URL:
+# http://www.freeotfe.org/docs/Explorer/pkcs11_drivers.htm 
+
+library=C:\\WINNT\\system32\\siecap11.dll
